<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_nav_menu_home" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/bottom_nav_menu_menu" />
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_menufragment"
        android:icon="@drawable/baseline_apps_24"
        android:title="@string/bottom_nav_menu_menufragment"/>

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/bottom_nav_menu_account" />

</menu>