<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="always"
        android:id="@+id/menu_home"
        android:layout_alignParentRight="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_nav_menu_home" />
    <item
        app:showAsAction="always"
        android:id="@+id/menu_tasks"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/bottom_nav_menu_account" />
    <item
        app:showAsAction="always"
        android:id="@+id/menu_habits"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/bottom_nav_menu_menu" />
    <item
        android:id="@+id/menu_timer"
        app:showAsAction="always"
        android:icon="@drawable/baseline_apps_24"
        android:title="@string/bottom_nav_menu_menufragment" />
</menu>