<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.imageview.UiImageViewDetailActivity"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:transitionName="detailview" />

    <TextView
        android:id="@+id/txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/default_margin_left_right"
        android:layout_marginRight="@dimen/default_margin_left_right"
        android:padding="10dp"
        android:text="@string/imageviewdetail_close"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/default_margin_left_right"
        android:padding="10dp"
        android:text="@string/imageviewdetail_pre"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/default_margin_left_right"
        android:padding="10dp"
        android:text="@string/imageviewdetail_next"
        android:textStyle="bold"
        android:textColor="@color/white" />


</RelativeLayout>